# InkFlow

./: .gitignore  README.md  manage.py  pyproject.toml
InkFlow/: asgi.py  settings.py  urls.py  wsgi.py
tips/: models.py  urls.py  views.py
tips/migrations/: 0001_initial.py
utils/: data.py
